Iterator 에선 배열같은 경우 카테고리를 만족하지 않는게 있는데 iterator 보조함수를 쓰면 된다.

--- a/CPPSTL/CPPSTL.vcxproj
+++ b/CPPSTL/CPPSTL.vcxproj
@@ -155,6 +155,8 @@
     <ClCompile Include="Iterator\IteratorCategory\tag_dispatching1.cpp" />
     <ClCompile Include="Iterator\IteratorCategory\tag_dispatching2.cpp" />
     <ClCompile Include="Iterator\IteratorCategory\tag_dispatching3.cpp" />
+    <ClCompile Include="Iterator\IteratorHelper\iter_func1.cpp" />
+    <ClCompile Include="Iterator\IteratorHelper\iter_func2.cpp" />
     <ClCompile Include="Iterator\IteratorTraits\iterator_traits.cpp" />
     <ClCompile Include="Iterator\IteratorTraits\iterator_traits2.cpp" />
     <ClCompile Include="Iterator\IteratorTraits\iterator_traits3.cpp" />
