Vector 에 대해 파일 입출력도 해보고, 값 변경도 해보았다. array 라는 STL도 있다는 것을 배웠다.

--- a/CPPSTL/CPPSTL.vcxproj
+++ b/CPPSTL/CPPSTL.vcxproj
@@ -143,6 +143,15 @@
     <ClCompile Include="Algorithm\STLAlgorithm\algo2.cpp" />
     <ClCompile Include="Algorithm\STLAlgorithm\algo3.cpp" />
     <ClCompile Include="Container\STLContainerFeature\container1.cpp" />
+    <ClCompile Include="Container\STLContainerFeature\policy1.cpp" />
+    <ClCompile Include="Container\STLContainerFeature\policy2.cpp" />
+    <ClCompile Include="Container\STLSequenceContainer1\array.cpp" />
+    <ClCompile Include="Container\STLSequenceContainer1\array2.cpp" />
+    <ClCompile Include="Container\STLSequenceContainer1\sequence1.cpp" />
+    <ClCompile Include="Container\STLSequenceContainer1\vector1.cpp" />
+    <ClCompile Include="Container\STLSequenceContainer1\vector2.cpp" />
+    <ClCompile Include="Container\STLSequenceContainer1\vector3.cpp" />
+    <ClCompile Include="Container\STLSequenceContainer1\vector4.cpp" />
     <ClCompile Include="Iterator\InsertIterator\insert_iterator.cpp" />
     <ClCompile Include="Iterator\InsertIterator\insert_iterator2.cpp" />
     <ClCompile Include="Iterator\InsertIterator\insert_iterator3.cpp" />
@@ -210,6 +219,7 @@
     <ClInclude Include="Algorithm\STLAlgorithmFunction\ecourse_st1.h" />
     <ClInclude Include="Algorithm\STLAlgorithmTransform\ecourse_st1.h" />
     <ClInclude Include="Algorithm\STLAlgorithm\ecourse_st1.h" />
+    <ClInclude Include="Container\STLSequenceContainer1\ecourse_st1.h" />
     <ClInclude Include="Iterator\IteratorAdapter\People.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
