Adapter 는 함수이름을 변경해서 다른 컨테이너처럼 보이도록 만든 것. stack이나 queue 같은 것들이 들어간다. set 도 multiset이 중복 가능등 진행하고 있다.

--- a/CPPSTL/CPPSTL.vcxproj
+++ b/CPPSTL/CPPSTL.vcxproj
@@ -142,7 +142,11 @@
     <ClCompile Include="Algorithm\STLAlgorithm\algo1.cpp" />
     <ClCompile Include="Algorithm\STLAlgorithm\algo2.cpp" />
     <ClCompile Include="Algorithm\STLAlgorithm\algo3.cpp" />
+    <ClCompile Include="Container\Adapter\adapter.cpp" />
+    <ClCompile Include="Container\Adapter\pq.cpp" />
     <ClCompile Include="Container\Adapter\stack.cpp" />
+    <ClCompile Include="Container\Associative\set1.cpp" />
+    <ClCompile Include="Container\Associative\set2.cpp" />
     <ClCompile Include="Container\STLContainerFeature\container1.cpp" />
     <ClCompile Include="Container\STLContainerFeature\policy1.cpp" />
     <ClCompile Include="Container\STLContainerFeature\policy2.cpp" />
