C++에 async 가 있다는 건 처음 알았고, await 와 똑같은 기능도 있었다. C++멀티스레드를 쓸 때 활용하면 되겠다.

--- a/CPPSTL/CPPSTL.vcxproj
+++ b/CPPSTL/CPPSTL.vcxproj
@@ -144,6 +144,9 @@
     <ClCompile Include="Algorithm\STLAlgorithm\algo1.cpp" />
     <ClCompile Include="Algorithm\STLAlgorithm\algo2.cpp" />
     <ClCompile Include="Algorithm\STLAlgorithm\algo3.cpp" />
+    <ClCompile Include="Concurrency\Async\async1.cpp" />
+    <ClCompile Include="Concurrency\Async\async2.cpp" />
+    <ClCompile Include="Concurrency\Async\async3.cpp" />
     <ClCompile Include="Concurrency\Thread\thread1.cpp" />
     <ClCompile Include="Concurrency\Thread\thread2.cpp" />
     <ClCompile Include="Concurrency\Thread\thread3.cpp" />
