--- a/CPPAdvanced/CPPAdvanced.vcxproj
+++ b/CPPAdvanced/CPPAdvanced.vcxproj
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -118,6 +119,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -127,9 +129,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Section01\EBCO\ebco1.cpp" />
     <ClCompile Include="Section01\Empty\empty1.cpp" />
     <ClCompile Include="Section01\Empty\empty2.cpp" />
     <ClCompile Include="Section01\Empty\empty3.cpp" />
+    <ClCompile Include="Section01\Empty\tag_dispatch1.cpp" />
+    <ClCompile Include="Section01\Empty\tag_dispatch2.cpp" />
+    <ClCompile Include="Section01\Empty\tag_dispatch3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
