Unique ptr 을 부분 특수화도 하여 배열을 받는 법을 배우게 되었다.

--- a/CPPAdvanced/CPPAdvanced.vcxproj
+++ b/CPPAdvanced/CPPAdvanced.vcxproj
@@ -157,6 +157,9 @@
     <ClCompile Include="Section01\MakeUniquePtr1\make_unique_ptr6.cpp" />
     <ClCompile Include="Section01\MakeUniquePtr1\make_unique_ptr7.cpp" />
     <ClCompile Include="Section01\MakeUniquePtr2\make_unique_ptr7-1.cpp" />
+    <ClCompile Include="Section01\MakeUniquePtr2\make_unique_ptr8.cpp" />
+    <ClCompile Include="Section01\MakeUniquePtr2\make_unique_ptr9-1.cpp" />
+    <ClCompile Include="Section01\MakeUniquePtr2\make_unique_ptr9.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
