RefCount 참조 계수를 직접 구현하여 오픈소스 기술을 따라해봤다. shared ptr 과 유사하지만 근본적인 문제점이 있어서 이렇게 직접 구현하기도 한다.

--- a/CPPAdvanced/CPPAdvanced.vcxproj
+++ b/CPPAdvanced/CPPAdvanced.vcxproj
@@ -173,6 +173,15 @@
     <ClCompile Include="Section02\Vector2\vector6.cpp" />
     <ClCompile Include="Section02\Vector2\vector7.cpp" />
     <ClCompile Include="Section02\Vector2\vector8.cpp" />
+    <ClCompile Include="Section03\ReferenceCounting\refcount0.cpp" />
+    <ClCompile Include="Section03\ReferenceCounting\refcount1.cpp" />
+    <ClCompile Include="Section03\ReferenceCounting\refcount2.cpp" />
+    <ClCompile Include="Section03\ReferenceCounting\refcount3.cpp" />
+    <ClCompile Include="Section03\ReferenceCounting\refcount4.cpp" />
+    <ClCompile Include="Section03\ReferenceCounting\refcount5.cpp" />
+    <ClCompile Include="Section03\ReferenceCounting\refcount6.cpp" />
+    <ClCompile Include="Section03\ReferenceCounting\refcount7.cpp" />
+    <ClCompile Include="Section03\ReferenceCounting\refcount8.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Libs\Point.h" />
