--- a/CPPAdvanced/CPPAdvanced.vcxproj
+++ b/CPPAdvanced/CPPAdvanced.vcxproj
@@ -173,6 +173,13 @@
     <ClCompile Include="Section02\Vector2\vector6.cpp" />
     <ClCompile Include="Section02\Vector2\vector7.cpp" />
     <ClCompile Include="Section02\Vector2\vector8.cpp" />
+    <ClCompile Include="Section03\Advance\advance1.cpp" />
+    <ClCompile Include="Section03\Advance\advance_concept.cpp" />
+    <ClCompile Include="Section03\Advance\advance_enable_if.cpp" />
+    <ClCompile Include="Section03\Advance\advance_if_constexpr.cpp" />
+    <ClCompile Include="Section03\Advance\advance_tag_dispatching1.cpp" />
+    <ClCompile Include="Section03\Advance\advance_tag_dispatching2.cpp" />
+    <ClCompile Include="Section03\Advance\advance_tag_dispatching3.cpp" />
     <ClCompile Include="Section03\ReferenceCounting\refcount0.cpp" />
     <ClCompile Include="Section03\ReferenceCounting\refcount1.cpp" />
     <ClCompile Include="Section03\ReferenceCounting\refcount2.cpp" />
@@ -182,6 +189,7 @@
     <ClCompile Include="Section03\ReferenceCounting\refcount6.cpp" />
     <ClCompile Include="Section03\ReferenceCounting\refcount7.cpp" />
     <ClCompile Include="Section03\ReferenceCounting\refcount8.cpp" />
+    <ClCompile Include="Section03\ReferenceCounting\refcount9.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Libs\Point.h" />
