base_from_member기반,파생 클래스 생성자에 따른 호출 순서에 따라 다중 상속을 이용하는 기술이었고, transparent는 새롭게 배우게 되었고, Coercion은 복습했다.

--- a/CPPAdvanced/CPPAdvanced.vcxproj
+++ b/CPPAdvanced/CPPAdvanced.vcxproj
@@ -190,6 +190,14 @@
     <ClCompile Include="Section03\ReferenceCounting\refcount7.cpp" />
     <ClCompile Include="Section03\ReferenceCounting\refcount8.cpp" />
     <ClCompile Include="Section03\ReferenceCounting\refcount9.cpp" />
+    <ClCompile Include="Section04\base_from_member1.cpp" />
+    <ClCompile Include="Section04\base_from_member2.cpp" />
+    <ClCompile Include="Section04\base_from_member3.cpp" />
+    <ClCompile Include="Section04\coercion1.cpp" />
+    <ClCompile Include="Section04\coercion2.cpp" />
+    <ClCompile Include="Section04\coercion3.cpp" />
+    <ClCompile Include="Section04\transparent1.cpp" />
+    <ClCompile Include="Section04\transparent2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Libs\Point.h" />
